--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -16,18 +16,18 @@
 		<li class="active">Finalização da Compra</li>
 	</ol>
 	<div class="page-header">
-		<h1>Finalização da Compra</h1>
+		<h1>Escolha forma de Pagamento</h1>
 	</div>
 	<div class="row">
-		<div class="col-md-8 col-md-offset-2">
-			<div class="alert alert-success">
-				Seu pedido foi realizado com sucesso, para realizar o pagamento faça o depósito na seguinte conta:
+		<div class="col-md-12">
+			<p> Pedido #{{ order.pk }}</p>
+		</div>
+		<div class="col-md-4 col-md-offset-2">
+			<a href="{% url 'checkout:pagseguro_view' order.pk %}" class="btn btn-success">Pagar com PagSeguro</a>
+		</div>
 
-			</div>
-			<p>
-			loren sjfjjf sjfjfj rdjcjfnjf fjcjfjjd fjcuifjr fjcicif fjfciifif ffigiif f cicifif figidisisbdjcifif  fifjfjf  
-			</p>
-
+		<div class="col-md-4">
+				<a href="#" class="btn btn-primary">Pagar com PayPal</a>
 		</div>
 	</div>
 {% endblock  %}
