--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="col-md-4">
-				<a href="#" class="btn btn-primary">Pagar com PayPal</a>
+			<a href="{% url 'checkout:paypal_view' order.pk %}" class="btn btn-primary">Pagar com PayPal</a>
 		</div>
 	</div>
 {% endblock  %}
